manifest/objects/DMMAX__Class__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailHTMLObjectHeader__c</fullName>
        <label>EmailHTMLObjectHeader</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailSubjectMgrTemplate__c</fullName>
        <label>EmailSubjectMgrTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailSubjectTemplate__c</fullName>
        <label>EmailSubjectTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailWelcomeTemplate__c</fullName>
        <label>Email Welcome Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__IncludeReferences__c</fullName>
        <label>IncludeReferences</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Library_Version_Number__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Library Version Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__LocalizationVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LocalizationVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Name_Reference_Field__c</fullName>
        <description>Override the field we get the name for display in eMails and tests</description>
        <label>Name Reference Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Owner_Reference_Field__c</fullName>
        <label>Owner Reference Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Prioritization__c</fullName>
        <description>What field(s) to order the records by in emails</description>
        <label>Prioritization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__ProcessFilter__c</fullName>
        <description>Batch processes can use this to limit the objects that will be processed.</description>
        <label>Process Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__RecordInsightsPerEmail__c</fullName>
        <label>Record Insights Per Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__RecordsPerEmail__c</fullName>
        <label>Records Per Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__ReportId__c</fullName>
        <label>ReportId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Sort_Order__c</fullName>
        <description>Used to Set up the order of the Classes in our home page</description>
        <label>Sort Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__cacheKey__c</fullName>
        <description>Changes to this indicate that client side needs to reset any stored cached rules</description>
        <label>cacheKey</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__style__c</fullName>
        <label>style</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Max Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>